@@ -209,10 +209,14 @@ class TestGeneralUsage:
         ])
 
 
-    def test_python_minus_m_invocation(self, testdir):
+    @py.test.mark.skipif("sys.version_info < (2,5)")
+    def test_python_minus_m_invocation_ok(self, testdir):
         p1 = testdir.makepyfile("def test_hello(): pass")
         res = testdir.run(py.std.sys.executable, "-m", "py.test", str(p1))
         assert res.ret == 0
-        p2 = testdir.makepyfile("def test_world(): 0/0")
-        res = testdir.run(py.std.sys.executable, "-m", "py.test", str(p2))
+
+    @py.test.mark.skipif("sys.version_info < (2,5)")
+    def test_python_minus_m_invocation_fail(self, testdir):
+        p1 = testdir.makepyfile("def test_fail(): 0/0")
+        res = testdir.run(py.std.sys.executable, "-m", "py.test", str(p1))
         assert res.ret == 1
